--- a/typical-build/build.gradle
+++ b/typical-build/build.gradle
@@ -1,6 +1,17 @@
 plugins {
-    id 'com.github.blindpirate.gogradle' version '0.11'
+    id 'com.github.blindpirate.gogradle' version '0.11.3'
 }
+
+repositories {
+    golang {
+        root ~/golang\.org\/[\w-]+\/[\w-]+/
+        url { path->
+            def split = path.split('/')
+           "https://github.com/golang/${split[2]}" 
+        }
+    }
+} 
+
 
 golang {
     packagePath = 'github.com/my/package' // go import path of project to be built, NOT local file system path!
